syntax = "proto3";

package proto;
option go_package = "github.com/horahoradev/horahora/scheduler/protocol";

service Scheduler {
    rpc dlChannel(ChannelRequest) returns (Empty) {}

    rpc dlPlaylist(PlaylistRequest) returns (Empty) {}

    rpc dlTag(TagRequest) returns (Empty) {}

    rpc listArchivalEntries(listArchivalEntriesRequest) returns (listArchivalEntriesResponse) {}
}

message Empty {}

message listArchivalEntriesRequest {
    int64 UserID = 1; // Need to standardize type on userID
}

message listArchivalEntriesResponse {
    repeated contentArchivalEntry entries = 1;
}

message contentArchivalEntry {
    int64 UserID = 1;
    supported_site website = 2;
    string contentType = 3;
    string contentValue = 4;
}

// FIXME: redundant
enum supported_site {
  niconico = 0;
  bilibili = 1;
  youtube = 2;
}

message ChannelRequest {
    supported_site website = 1;
    int64 userID = 2; // User who made the request
    string channelID = 3;
}

message PlaylistRequest {
    supported_site website = 1;
    int64 userID = 2; // User who made the request
    string playlistID = 3;
}

message TagRequest {
    supported_site website = 1;
    int64 userID = 2; // User who made the request
    string tagValue = 3;
}